# lilium

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  PITCHME.css  PITCHME.md  PITCHME.yaml  README.md  interpreter.cpp
as/: parser.y
as/codegen/: generator.h
as/parser/grammar/: scanner.l
bas/: Makefile  parser.y  scan.l  scanner.l
bas/parser/grammar/: scanner.l
benches/: factorial.rs  fibonacci.rs  sum.rs
cc/: main.cc
cc/ast/: program.cc  program.h
cc/ast/common/: attribute.h  operators.h  symbol.h
cc/ast/data/: var.cc  var.h
cc/ast/expr/: binary_expr.cc  binary_expr.h  cond_expr.cc  cond_expr.h  const.cc  const.h  expr.cc  expr.h  global_expr.cc  global_expr.h  unary_expr.cc  unary_expr.h
cc/ast/func/: call_expr.cc  call_expr.h  func_def.cc  func_def.h
cc/parser/: controller.cc  controller.h  scanner.cc  scanner.h  v2.cc
cc/parser/grammar/: parser.yy  scanner.l
controller/: common.h  main.cc
lang/: Makefile  parser.y  scanner.l
lang/ast/: binary_expr.cc  binary_expr.h  expr.cc  expr.h  func_def.cc  func_def.h  global_expr.h  node.cc  node.h  operators.h  plus_expr.h  program.cc  program.h  types.h  var.cc  var.h
lang/ast/common/: attribute.h  operators.h  symbol.h  types.h
lang/ast/data/: var.cc  var.h
lang/ast/expr/: binary_expr.cc  binary_expr.h  cond_expr.cc  cond_expr.h  const.cc  const.h  const_double.cc  const_double.h  const_int.cc  const_int.h  const_single.cc  const_single.h  expr.cc  expr.h  global_expr.cc  global_expr.h  unary_expr.cc  unary_expr.h
lang/ast/func/: call_expr.cc  call_expr.h  func_def.cc  func_def.h
lang/parser/: controller.cc  controller.h  parser.y  parser.yy  scanner.cc  scanner.h  scanner.l
lang/parser/grammar/: parser.yy  scanner.l
objdump/: main.cc
objdump/pipeline/: dump.cc  dump.h
rust/lilium-as/: Cargo.toml
rust/lilium-as/src/: main.rs
rust/lilium-jit/: Cargo.toml
rust/lilium-jit/src/: main.rs
rust/lilium-vm/: Cargo.toml
rust/lilium-vm/src/: main.rs
src/: ast.rs  lib.rs  main.rs  parser.lalrpop  parser.rs
src/bas/: Makefile  scan.l
src/common/: mod.rs
src/compiler/: bytecode.rs  codegen.rs  mod.rs  parser.lalrpop
src/compiler/codegen/: mod.rs
src/compiler/parser/: mod.rs  parser.lalrpop
src/disassembler/: mod.rs
src/tests/: helpers.rs  integers.rs  logic.rs  mod.rs
src/vm/: asm.rs  atoms.rs  dispatch.rs  interpreter.cc  mod.rs  ops.rs  reg.rs  types.rs
tests/: calls.rs  constants.rs  integers.rs  logic.rs  tail_calls.rs
vm/: Makefile  bytecode_loader.cc  bytecode_loader.cpp  bytecode_loader.h  function_table.cc  function_table.h  interpreter.cc  interpreter.h  main.cc  module.cc  module.h  opcodes.h
vm/bytecode/: bytecode_loader.cc  bytecode_loader.h  common.h  func_addr.cc  func_addr.h  generator.cc  generator.h  loader.cc  loader.h
vm/common/: types.h
vm/constants/: opcodes.h  types.h
vm/data/: common.h  program_buffer.h  vm_common.h
vm/pipeline/: interpreter.cc  interpreter.h  linker.cc  linker.h  loader.cc  loader.h
vm/types/: types.h
