[package]
name = "lilium"
version = "0.1.0"
authors = ["Michael Pucher <michael.pucher.main@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
clippy = {version = "*", optional = true}
lalrpop-util = "0.13.1"
regex = "0.2.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
bincode = "0.8.0"
